2010-11-12  Luiz Agostini  <luiz.agostini@openbossa.org>

        Reviewed by Andreas Kling.

        [Qt] Static platform plugin support
        https://bugs.webkit.org/show_bug.cgi?id=49470

        Adding support for statically linked platform plugins.

        * WebCoreSupport/QtPlatformPlugin.cpp:
        (WebCore::QtPlatformPlugin::loadStaticallyLinkedPlugin):
        (WebCore::QtPlatformPlugin::plugin):
        * WebCoreSupport/QtPlatformPlugin.h:

2010-11-17  Andreas Kling  <kling@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.

        Reuse the size of the actualVisibleContentRect when loading a new page
        or navigating session history.

        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::transitionToCommittedForNewPage):

2010-11-17  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Darin Adler.

        Converge means of querying a parent node into one way, which is Node::parentNode.
        https://bugs.webkit.org/show_bug.cgi?id=49686

        * Api/qwebelement.cpp:
        (QWebElement::prependOutside): Changed to use parentNode.
        (QWebElement::appendOutside): Ditto.
        (QWebElement::encloseContentsWith): Ditto.
        (QWebElement::encloseWith): Ditto.

2010-11-16  Simon Hausmann  <simon.hausmann@nokia.com>

        Reviewed by Andreas Kling.

        [Qt] Remove synchronous QWebPage::checkPermissions signal
        https://bugs.webkit.org/show_bug.cgi?id=46810

        As decided in the API review, we remove this signal and replace its only use currently
        with cached credentials.

        * Api/qwebpage.cpp:
        (QWebPage::setUserPermission): Pass the WebCore frame instead of the QWebFrame.
        * Api/qwebpage.h:
        * WebCoreSupport/NotificationPresenterClientQt.cpp:
        (WebCore::NotificationPresenterClientQt::checkPermission): Replaced explicit
        signal emission with hash lookup of previously granted permission (or not).